{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 112,
  "lineage": "931df927-9e44-583e-113b-dff36c10c288",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "my_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04e09c8e2d83a944b",
            "domain": "vpc",
            "id": "eipalloc-04e09c8e2d83a944b",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-98-80-38-199.compute-1.amazonaws.com",
            "public_ip": "98.80.38.199",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.9.4",
              "cloud": "AWS",
              "env": "develop",
              "owner": "Miguel",
              "project": "AWS-SAA-C03",
              "region": "virginia"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_vpc.vpc_lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:926664221711:internet-gateway/igw-0a92b37f2fd077e81",
            "id": "igw-0a92b37f2fd077e81",
            "owner_id": "926664221711",
            "tags": {
              "Name": "IGW-AWS-LABS"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.9.4",
              "Name": "IGW-AWS-LABS",
              "cloud": "AWS",
              "env": "develop",
              "owner": "Miguel",
              "project": "AWS-SAA-C03",
              "region": "virginia"
            },
            "vpc_id": "vpc-04b63e388524fcc17"
          },
          "dependencies": [
            "aws_vpc.vpc_lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my_nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04e09c8e2d83a944b",
            "association_id": "eipassoc-0f9e7fe84d39791b4",
            "connectivity_type": "public",
            "id": "nat-04c6571117e033d3f",
            "network_interface_id": "eni-0095bc63008b30f7e",
            "private_ip": "192.168.0.121",
            "public_ip": "98.80.38.199",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-057bd39e0667b0c42",
            "tags": {
              "Name": "NAT-AWS-LABS"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.9.4",
              "Name": "NAT-AWS-LABS",
              "cloud": "AWS",
              "env": "develop",
              "owner": "Miguel",
              "project": "AWS-SAA-C03",
              "region": "virginia"
            }
          },
          "dependencies": [
            "aws_eip.my_eip",
            "aws_internet_gateway.my_igw",
            "aws_subnet.my_public_subnet",
            "aws_vpc.vpc_lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "my_network_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:926664221711:network-acl/acl-01f30331c51fecf7f",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 443
              }
            ],
            "id": "acl-01f30331c51fecf7f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 443
              }
            ],
            "owner_id": "926664221711",
            "subnet_ids": [],
            "tags": {
              "Name": "NACL-AWS-LABS"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.9.4",
              "Name": "NACL-AWS-LABS",
              "cloud": "AWS",
              "env": "develop",
              "owner": "Miguel",
              "project": "AWS-SAA-C03",
              "region": "virginia"
            },
            "vpc_id": "vpc-04b63e388524fcc17"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:926664221711:route-table/rtb-01500136bdb4c669a",
            "id": "rtb-01500136bdb4c669a",
            "owner_id": "926664221711",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-04c6571117e033d3f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT-AWS-LABS-PRIV"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.9.4",
              "Name": "RT-AWS-LABS-PRIV",
              "cloud": "AWS",
              "env": "develop",
              "owner": "Miguel",
              "project": "AWS-SAA-C03",
              "region": "virginia"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b63e388524fcc17"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.my_eip",
            "aws_internet_gateway.my_igw",
            "aws_nat_gateway.my_nat_gw",
            "aws_subnet.my_public_subnet",
            "aws_vpc.vpc_lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:926664221711:route-table/rtb-05b6de06e525f31b1",
            "id": "rtb-05b6de06e525f31b1",
            "owner_id": "926664221711",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a92b37f2fd077e81",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT-AWS-LABS-PUB"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.9.4",
              "Name": "RT-AWS-LABS-PUB",
              "cloud": "AWS",
              "env": "develop",
              "owner": "Miguel",
              "project": "AWS-SAA-C03",
              "region": "virginia"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b63e388524fcc17"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_vpc.vpc_lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f5328750144b9ec",
            "route_table_id": "rtb-01500136bdb4c669a",
            "subnet_id": "subnet-016cfb72b5fe585b0"
          },
          "dependencies": [
            "aws_eip.my_eip",
            "aws_internet_gateway.my_igw",
            "aws_nat_gateway.my_nat_gw",
            "aws_route_table.rt_private_subnet",
            "aws_subnet.my_private_subnet",
            "aws_subnet.my_public_subnet",
            "aws_vpc.vpc_lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f1eca1d05fc4688",
            "route_table_id": "rtb-05b6de06e525f31b1",
            "subnet_id": "subnet-057bd39e0667b0c42"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.rt_public_subnet",
            "aws_subnet.my_public_subnet",
            "aws_vpc.vpc_lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:926664221711:security-group/sg-02500550e50dce75e",
            "description": "SG-WEB",
            "egress": [],
            "id": "sg-02500550e50dce75e",
            "ingress": [],
            "name": "APP-SG",
            "name_prefix": "",
            "owner_id": "926664221711",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app_sg"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.9.4",
              "Name": "app_sg",
              "cloud": "AWS",
              "env": "develop",
              "owner": "Miguel",
              "project": "AWS-SAA-C03",
              "region": "virginia"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b63e388524fcc17"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:926664221711:subnet/subnet-016cfb72b5fe585b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.2.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-016cfb72b5fe585b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "926664221711",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SUBNET-PRIV-A"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.9.4",
              "Name": "SUBNET-PRIV-A",
              "cloud": "AWS",
              "env": "develop",
              "owner": "Miguel",
              "project": "AWS-SAA-C03",
              "region": "virginia"
            },
            "vpc_id": "vpc-04b63e388524fcc17"
          },
          "dependencies": [
            "aws_vpc.vpc_lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:926664221711:subnet/subnet-057bd39e0667b0c42",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057bd39e0667b0c42",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "926664221711",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SUBNET-PUB-A"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.9.4",
              "Name": "SUBNET-PUB-A",
              "cloud": "AWS",
              "env": "develop",
              "owner": "Miguel",
              "project": "AWS-SAA-C03",
              "region": "virginia"
            },
            "vpc_id": "vpc-04b63e388524fcc17"
          },
          "dependencies": [
            "aws_vpc.vpc_lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_lab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:926664221711:vpc/vpc-04b63e388524fcc17",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/22",
            "default_network_acl_id": "acl-0f268f74b2b58b6b4",
            "default_route_table_id": "rtb-030db512b1b46f4cc",
            "default_security_group_id": "sg-0efdda8068bd32495",
            "dhcp_options_id": "dopt-00858ee10d6fa1059",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04b63e388524fcc17",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-030db512b1b46f4cc",
            "owner_id": "926664221711",
            "tags": {
              "Name": "AWS-LABS"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.9.4",
              "Name": "AWS-LABS",
              "cloud": "AWS",
              "env": "develop",
              "owner": "Miguel",
              "project": "AWS-SAA-C03",
              "region": "virginia"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:926664221711:security-group-rule/sgr-0cea6c6650eafd5d5",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0cea6c6650eafd5d5",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-02500550e50dce75e",
            "security_group_rule_id": "sgr-0cea6c6650eafd5d5",
            "tags": null,
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.9.4",
              "cloud": "AWS",
              "env": "develop",
              "owner": "Miguel",
              "project": "AWS-SAA-C03",
              "region": "virginia"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app_sg",
            "aws_vpc.vpc_lab"
          ]
        }
      ]
    }
  ]
}